k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: allaria-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: swr.la-south-2.myhuaweicloud.com/allaria-sandbox/allaria-hub-front:latest
          ports:
            - containerPort: 3097
          readinessProbe:
            httpGet:
              path: /
              port: 3097
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: allaria-hub
spec:
  selector:
    app: front
  ports:
    - port: 3097
      targetPort: 3097
